--- a/project/button_demo/Makefile
+++ b/project/button_demo/Makefile
@@ -11,14 +11,14 @@ AS              = msp430-elf-as
 all: button.elf 
 
 #additional rules for files
-button.elf: ${COMMON_OBJECTS} p1_interrupt_handler.o led.o switches.o buttonMain.o buzzer.o wdInterruptHandler.o stateMachines.o  ../lib/libTimer.a 
+button.elf: ${COMMON_OBJECTS} p1_interrupt_handler.o led.o switches.o buttonMain.o buzzer.o wdInterruptHandler.o stateMachines.o function.o  ../lib/libTimer.a 
 	${CC} ${CFLAGS} ${LDFLAGS} -o $@ $^
 
 load: button.elf
 	msp430loader.sh button.elf
 
 clean:
-	rm -f *.o *.elf *~* #
+	rm -f *.o *.elf *~* *#*
 
 buttonMain.o: buttonMain.c
 
@@ -31,5 +31,7 @@ stateMachines.o: stateMachines.c stateMachines.h
 p1_interrupt_handler.o: p1_interrupt_handler.c
 
 buzzer.o: buzzer.c buzzer.h
+
+function.o: switches.h
 
 wdInterruptHandler.o: wdInterruptHandler.c buzzer.h led.h switches.h stateMachines.h 
